# stpyr

./: Cargo.toml  README.md  _config.yml  rustfmt.toml
demo/: .gitignore  Cargo.toml
demo/res/: terrain.toml  vaults.toml
demo/src/: main.rs
res/: bestiary.toml  gazebo.vault  room.vault  terrain.toml
src/: action.rs  adventure.rs  ai.rs  appearance.rs  behavior.rs  curses.rs  def.rs  display.rs  energy.rs  events.rs  fov.rs  grid.rs  labyrinth.rs  lib.rs  log.rs  main.rs  map.rs  movement.rs  player.rs  pos.rs  resources.rs  scene.rs  tile_generator.rs  vault.rs
stpyr/: Cargo.toml
stpyr/src/: adventure.rs  behavior.rs  def.rs  fov.rs  grid.rs  lib.rs  map.rs  player.rs  resources.rs  scene.rs  vault.rs  wizard.rs
stpyr/src/def/: terrain.rs  vault.rs
stpyr_curses/: Cargo.toml
stpyr_curses/src/: curses.rs  lib.rs
